<resources>
    <string name="app_name">StarWarsDB</string>
    <string name="no_app_available">There is no App available for this functionality</string>
    <string name="favorite_character">Mi personaje favorito de StarWars es </string>
    <string name="no_camera_app">There is no Camera App available for this functionality</string>
    <string name="select_picture">Select a picture</string>
    <string name="gender_label">Gender: </string>
    <string name="height_label">Height: </string>
    <string name="mass_label">Mass: </string>
    <string name="hair_label">Hair Color: </string>
    <string name="skin_label">Skin Color: </string>
    <string name="birth_year">Birth Year: </string>
</resources>
